# vweb

./: .gitignore  README  README.md  RELEASE_NOTES  example1.py  example3.py  html.py  htmlpage.py  htmltable.py  requirements.txt  setup.cfg  setup.py
docs/: htmlpage_super_class.odg
examples/: example1.py  example2.py  example3.py  helloworld.py
src/vweb/: html.py  htmlify.py  htmlpage.py  htmltable.py
src/vweb.egg-info/: PKG-INFO  SOURCES.txt
vweb/: html.py  htmlify.py  htmlpage.py  htmltable.py
