[metadata]
name = vweb
version = 2.0.0
author = David Link
author_email = dvlink@gmail.com
description = Simple Python Website Frame work
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dlink/vweb
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Environment :: Web Environment
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries
keywords = html, htmltable, website

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
